--- a/package.json
+++ b/package.json
@@ -8,25 +8,31 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
-  "keywords": ["smtp", "mail", "server", "email"],
+  "keywords": [
+    "smtp",
+    "mail",
+    "server",
+    "email"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@azure/storage-blob": "^12.30.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dns": "^0.2.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemailer": "^6.9.7",
-    "smtp-server": "^3.12.0",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mailparser": "^3.6.5",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
-    "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dns": "^0.2.2",
-    "winston": "^3.11.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "smtp-server": "^3.12.0",
     "uuid": "^9.0.1",
-    "helmet": "^7.1.0",
-    "cors": "^2.8.5"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
