fixed UI issues

--- a/src/client/vercel.json
+++ b/src/client/vercel.json
@@ -1,22 +1,15 @@
 {
-  "version": 2,
-  "builds": [
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
+  "framework": "create-react-app",
+  "rewrites": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "env": {
-    "REACT_APP_API_URL": "https://your-backend-url.com"
+    "REACT_APP_API_URL": "https://mailing.kunalpatil.me/api"
   }
 }
 
